# dto_bindgen

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
crates/dto_bindgen/: Cargo.toml
crates/dto_bindgen/examples/: basic_export.rs
crates/dto_bindgen/src/: export.rs  lib.rs
crates/dto_bindgen/tests/: derive_struct.rs
crates/dto_bindgen_backend_python/: Cargo.toml
crates/dto_bindgen_backend_python/src/: lib.rs
crates/dto_bindgen_backend_ts/: Cargo.toml
crates/dto_bindgen_backend_ts/src/: lib.rs  module.rs  syntax.rs
crates/dto_bindgen_cli/: Cargo.toml
crates/dto_bindgen_cli/src/: main.rs
crates/dto_bindgen_core/: Cargo.toml
crates/dto_bindgen_core/src/: backend.rs  canonical.rs  config.rs  definitions.rs  descriptor.rs  diagnostics.rs  export.rs  fields.rs  generated.rs  identity.rs  inventory.rs  lib.rs  registry.rs  roots.rs  source.rs  types.rs  validation.rs  writer.rs
crates/dto_bindgen_macros/: Cargo.toml
crates/dto_bindgen_macros/src/: lib.rs
crates/dto_bindgen_test/: Cargo.toml
crates/dto_bindgen_test/src/: lib.rs
crates/dto_bindgen_test/tests/: generated_fixture.rs
docs/handoff/dto_bindgen_handoff/repo/: DTO_BINDGEN_TOML_EXAMPLE.toml
