[package]
name = "dto_bindgen_backend_python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Python dataclass backend for dto_bindgen."
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dto_bindgen_core = { workspace = true }

[lints]
workspace = true
