[package]
name = "dto_bindgen_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line helper for dto_bindgen exports."
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "dto_bindgen"
path = "src/main.rs"

[dependencies]
dto_bindgen = { workspace = true }
dto_bindgen_backend_python = { workspace = true }
dto_bindgen_backend_ts = { workspace = true }
dto_bindgen_core = { workspace = true }

[lints]
workspace = true
