[package]
name = "dto_bindgen_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core neutral IR and export orchestration for dto_bindgen."
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
