[package]
name = "dto_bindgen_test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared test helpers for dto_bindgen."
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dto_bindgen = { workspace = true }
dto_bindgen_backend_python = { workspace = true }
dto_bindgen_backend_ts = { workspace = true }
dto_bindgen_core = { workspace = true }

[lints]
workspace = true
